@@ -1,6 +1,10 @@
 
 		CHANGES in `mboost' VERSION 1.0-2 (2007-02-xx)
 
+  o  bols: works now for factors and can be set-up
+     to use Ridge-estimation. Intercept can be omitted
+     now (via center = TRUE).
+
   o  new btree() baselearner for gamboost() available
 
   o  fix inconsistencies in regression tests
